@@ -17,6 +17,7 @@ import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -173,7 +174,7 @@ public class HttpControlServer {
           node.put("running", entry.getValue());
           return node;
         })
-        .toList());
+        .collect(Collectors.toList()));
     return map;
   }
 
